Grammars/.antlr/LSharpParser.java
// Generated from c:\Users\carlu\Documents\Visual Studio 2017\Projects\LSharp\LSharp\Grammars\LSharpParser.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LSharpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACES=1, SINGLE_LINE_COMMENT=2, DELIMITED_COMMENT=3, USING=4, PART=5, 
		OF=6, IN=7, TO=8, INTERFACE=9, CLASS=10, ENUM=11, FROM=12, PUBLIC=13, 
		INTERNAL=14, PRIVATE=15, STATIC=16, NEW=17, RETURN=18, BREAK=19, WITH=20, 
		VAR=21, UNIT=22, NULL=23, THIS=24, BASE=25, WHILE=26, ENTRYPOINT=27, SC=28, 
		LEAD=29, ARR=30, DOT=31, LT=32, GT=33, OP=34, CP=35, OSB=36, CSB=37, EQ=38, 
		PEQ=39, MEQ=40, AEQ=41, DEQ=42, QM=43, COL=44, EM=45, COM=46, PLUS=47, 
		MINUS=48, MULT=49, DIV=50, MOD=51, LTE=52, GTE=53, EQS=54, NEQ=55, AND=56, 
		OR=57, WOT=58, DEF=59, NIL=60, IDENT=61, LITINT=62, LITDEC=63, LITCHAR=64, 
		LITSTR=65, LITBOOL=66;
	public static final int
		RULE_program = 0, RULE_usingList = 1, RULE_using = 2, RULE_namespace = 3, 
		RULE_langMember = 4, RULE_interfaceDef = 5, RULE_classDef = 6, RULE_baseClass = 7, 
		RULE_enumDef = 8, RULE_interfaceMember = 9, RULE_classMember = 10, RULE_statement = 11, 
		RULE_nonEndingStatement = 12, RULE_endingStatement = 13, RULE_breakStatement = 14, 
		RULE_throwStatement = 15, RULE_varDef = 16, RULE_localDef = 17, RULE_funcDef = 18, 
		RULE_ctorDef = 19, RULE_params = 20, RULE_assign = 21, RULE_triStatement = 22, 
		RULE_whileStatement = 23, RULE_foreachStatement = 24, RULE_switchStatement = 25, 
		RULE_caseBlock = 26, RULE_defaultBlock = 27, RULE_ifBlock = 28, RULE_elseBlock = 29, 
		RULE_returnStatement = 30, RULE_emptyStatement = 31, RULE_nullCheck = 32, 
		RULE_expression = 33, RULE_funcCall = 34, RULE_args = 35, RULE_ident = 36, 
		RULE_binaryOp = 37, RULE_assignOperator = 38, RULE_access = 39;
	public static final String[] ruleNames = {
		"program", "usingList", "using", "namespace", "langMember", "interfaceDef", 
		"classDef", "baseClass", "enumDef", "interfaceMember", "classMember", 
		"statement", "nonEndingStatement", "endingStatement", "breakStatement", 
		"throwStatement", "varDef", "localDef", "funcDef", "ctorDef", "params", 
		"assign", "triStatement", "whileStatement", "foreachStatement", "switchStatement", 
		"caseBlock", "defaultBlock", "ifBlock", "elseBlock", "returnStatement", 
		"emptyStatement", "nullCheck", "expression", "funcCall", "args", "ident", 
		"binaryOp", "assignOperator", "access"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'using'", "'part'", "'of'", "'in'", "'to'", "'interface'", 
		"'class'", "'enum'", "'from'", "'public'", "'internal'", "'private'", 
		"'static'", "'new'", "'return'", "'break'", "'with'", "'var'", "'unit'", 
		"'null'", "'this'", "'base'", "'while'", "'EntryPoint'", "';'", "'>>'", 
		"'=>'", "'.'", "'<'", "'>'", "'('", "')'", "'['", "']'", "'='", "'+='", 
		"'-='", "'*='", "'/='", "'?'", "':'", "'!'", "','", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "'??'", 
		"'?:'", "'!:'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WHITESPACES", "SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", "USING", 
		"PART", "OF", "IN", "TO", "INTERFACE", "CLASS", "ENUM", "FROM", "PUBLIC", 
		"INTERNAL", "PRIVATE", "STATIC", "NEW", "RETURN", "BREAK", "WITH", "VAR", 
		"UNIT", "NULL", "THIS", "BASE", "WHILE", "ENTRYPOINT", "SC", "LEAD", "ARR", 
		"DOT", "LT", "GT", "OP", "CP", "OSB", "CSB", "EQ", "PEQ", "MEQ", "AEQ", 
		"DEQ", "QM", "COL", "EM", "COM", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
		"LTE", "GTE", "EQS", "NEQ", "AND", "OR", "WOT", "DEF", "NIL", "IDENT", 
		"LITINT", "LITDEC", "LITCHAR", "LITSTR", "LITBOOL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LSharpParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LSharpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public UsingListContext usingList() {
			return getRuleContext(UsingListContext.class,0);
		}
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public List<LangMemberContext> langMember() {
			return getRuleContexts(LangMemberContext.class);
		}
		public LangMemberContext langMember(int i) {
			return getRuleContext(LangMemberContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==USING) {
				{
				setState(80);
				usingList();
				}
			}

			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PART) {
				{
				setState(83);
				namespace();
				}
			}

			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << INTERNAL) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(86);
				langMember();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsingListContext extends ParserRuleContext {
		public List<UsingContext> using() {
			return getRuleContexts(UsingContext.class);
		}
		public UsingContext using(int i) {
			return getRuleContext(UsingContext.class,i);
		}
		public UsingListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usingList; }
	}

	public final UsingListContext usingList() throws RecognitionException {
		UsingListContext _localctx = new UsingListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_usingList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			using();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==USING) {
				{
				{
				setState(93);
				using();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsingContext extends ParserRuleContext {
		public TerminalNode USING() { return getToken(LSharpParser.USING, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public UsingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_using; }
	}

	public final UsingContext using() throws RecognitionException {
		UsingContext _localctx = new UsingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_using);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(USING);
			setState(100);
			ident(0);
			setState(101);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public TerminalNode PART() { return getToken(LSharpParser.PART, 0); }
		public TerminalNode OF() { return getToken(LSharpParser.OF, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_namespace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(PART);
			setState(104);
			match(OF);
			setState(105);
			ident(0);
			setState(106);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LangMemberContext extends ParserRuleContext {
		public InterfaceDefContext interfaceDef() {
			return getRuleContext(InterfaceDefContext.class,0);
		}
		public ClassDefContext classDef() {
			return getRuleContext(ClassDefContext.class,0);
		}
		public EnumDefContext enumDef() {
			return getRuleContext(EnumDefContext.class,0);
		}
		public LangMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_langMember; }
	}

	public final LangMemberContext langMember() throws RecognitionException {
		LangMemberContext _localctx = new LangMemberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_langMember);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				interfaceDef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				classDef();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				enumDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfaceDefContext extends ParserRuleContext {
		public AccessContext access() {
			return getRuleContext(AccessContext.class,0);
		}
		public TerminalNode INTERFACE() { return getToken(LSharpParser.INTERFACE, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public List<InterfaceMemberContext> interfaceMember() {
			return getRuleContexts(InterfaceMemberContext.class);
		}
		public InterfaceMemberContext interfaceMember(int i) {
			return getRuleContext(InterfaceMemberContext.class,i);
		}
		public InterfaceDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDef; }
	}

	public final InterfaceDefContext interfaceDef() throws RecognitionException {
		InterfaceDefContext _localctx = new InterfaceDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_interfaceDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			access();
			setState(114);
			match(INTERFACE);
			setState(115);
			ident(0);
			setState(116);
			match(LEAD);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VAR || _la==UNIT) {
				{
				{
				setState(117);
				interfaceMember();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefContext extends ParserRuleContext {
		public AccessContext access() {
			return getRuleContext(AccessContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(LSharpParser.CLASS, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public TerminalNode STATIC() { return getToken(LSharpParser.STATIC, 0); }
		public BaseClassContext baseClass() {
			return getRuleContext(BaseClassContext.class,0);
		}
		public List<ClassMemberContext> classMember() {
			return getRuleContexts(ClassMemberContext.class);
		}
		public ClassMemberContext classMember(int i) {
			return getRuleContext(ClassMemberContext.class,i);
		}
		public ClassDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDef; }
	}

	public final ClassDefContext classDef() throws RecognitionException {
		ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classDef);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			access();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STATIC) {
				{
				setState(124);
				match(STATIC);
				}
			}

			setState(127);
			match(CLASS);
			setState(128);
			ident(0);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(129);
				baseClass();
				}
			}

			setState(132);
			match(LEAD);
			setState(136);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(133);
					classMember();
					}
					} 
				}
				setState(138);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseClassContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(LSharpParser.FROM, 0); }
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public BaseClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseClass; }
	}

	public final BaseClassContext baseClass() throws RecognitionException {
		BaseClassContext _localctx = new BaseClassContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_baseClass);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(FROM);
			setState(140);
			ident(0);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COM) {
				{
				{
				setState(141);
				match(COM);
				setState(142);
				ident(0);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumDefContext extends ParserRuleContext {
		public AccessContext access() {
			return getRuleContext(AccessContext.class,0);
		}
		public TerminalNode ENUM() { return getToken(LSharpParser.ENUM, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public EnumDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumDef; }
	}

	public final EnumDefContext enumDef() throws RecognitionException {
		EnumDefContext _localctx = new EnumDefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_enumDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			access();
			setState(149);
			match(ENUM);
			setState(150);
			ident(0);
			setState(151);
			match(LEAD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterfaceMemberContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode VAR() { return getToken(LSharpParser.VAR, 0); }
		public TerminalNode UNIT() { return getToken(LSharpParser.UNIT, 0); }
		public InterfaceMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceMember; }
	}

	public final InterfaceMemberContext interfaceMember() throws RecognitionException {
		InterfaceMemberContext _localctx = new InterfaceMemberContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_interfaceMember);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_la = _input.LA(1);
			if ( !(_la==VAR || _la==UNIT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(154);
			ident(0);
			setState(155);
			match(OP);
			setState(156);
			params();
			setState(157);
			match(CP);
			setState(158);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassMemberContext extends ParserRuleContext {
		public VarDefContext varDef() {
			return getRuleContext(VarDefContext.class,0);
		}
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public CtorDefContext ctorDef() {
			return getRuleContext(CtorDefContext.class,0);
		}
		public ClassMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMember; }
	}

	public final ClassMemberContext classMember() throws RecognitionException {
		ClassMemberContext _localctx = new ClassMemberContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_classMember);
		try {
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				varDef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				funcDef();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(162);
				ctorDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public NonEndingStatementContext nonEndingStatement() {
			return getRuleContext(NonEndingStatementContext.class,0);
		}
		public EndingStatementContext endingStatement() {
			return getRuleContext(EndingStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_statement);
		try {
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEW:
			case VAR:
			case NULL:
			case THIS:
			case BASE:
			case WHILE:
			case SC:
			case OP:
			case EM:
			case IDENT:
			case LITINT:
			case LITDEC:
			case LITCHAR:
			case LITSTR:
			case LITBOOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				nonEndingStatement();
				}
				break;
			case RETURN:
			case BREAK:
				enterOuterAlt(_localctx, 2);
				{
				setState(166);
				endingStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonEndingStatementContext extends ParserRuleContext {
		public LocalDefContext localDef() {
			return getRuleContext(LocalDefContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TriStatementContext triStatement() {
			return getRuleContext(TriStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ForeachStatementContext foreachStatement() {
			return getRuleContext(ForeachStatementContext.class,0);
		}
		public SwitchStatementContext switchStatement() {
			return getRuleContext(SwitchStatementContext.class,0);
		}
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public TerminalNode QM() { return getToken(LSharpParser.QM, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public EmptyStatementContext emptyStatement() {
			return getRuleContext(EmptyStatementContext.class,0);
		}
		public NullCheckContext nullCheck() {
			return getRuleContext(NullCheckContext.class,0);
		}
		public NonEndingStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonEndingStatement; }
	}

	public final NonEndingStatementContext nonEndingStatement() throws RecognitionException {
		NonEndingStatementContext _localctx = new NonEndingStatementContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_nonEndingStatement);
		int _la;
		try {
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(169);
				localDef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(170);
				assign();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(171);
				triStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(172);
				whileStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(173);
				foreachStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(174);
				switchStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(175);
				funcCall();
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==QM) {
					{
					setState(176);
					match(QM);
					setState(179);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case NEW:
					case THIS:
					case BASE:
					case IDENT:
						{
						setState(177);
						ident(0);
						}
						break;
					case DOT:
						{
						setState(178);
						match(DOT);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}

				setState(183);
				match(SC);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(185);
				emptyStatement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(186);
				nullCheck();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndingStatementContext extends ParserRuleContext {
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public BreakStatementContext breakStatement() {
			return getRuleContext(BreakStatementContext.class,0);
		}
		public ThrowStatementContext throwStatement() {
			return getRuleContext(ThrowStatementContext.class,0);
		}
		public EndingStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endingStatement; }
	}

	public final EndingStatementContext endingStatement() throws RecognitionException {
		EndingStatementContext _localctx = new EndingStatementContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_endingStatement);
		try {
			setState(192);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				returnStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(190);
				breakStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(191);
				throwStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BreakStatementContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(LSharpParser.BREAK, 0); }
		public BreakStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_breakStatement; }
	}

	public final BreakStatementContext breakStatement() throws RecognitionException {
		BreakStatementContext _localctx = new BreakStatementContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_breakStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(BREAK);
			setState(195);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThrowStatementContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(LSharpParser.BREAK, 0); }
		public TerminalNode WITH() { return getToken(LSharpParser.WITH, 0); }
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ThrowStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_throwStatement; }
	}

	public final ThrowStatementContext throwStatement() throws RecognitionException {
		ThrowStatementContext _localctx = new ThrowStatementContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_throwStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			match(BREAK);
			setState(198);
			match(WITH);
			setState(199);
			ident(0);
			setState(200);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
